--- a/Linear Algebra/LinearAlgebra.tex
+++ b/Linear Algebra/LinearAlgebra.tex
@@ -26,4 +26,11 @@
 
 \lec{1}{50}
 
+\newpage
+%─────Appendix────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+\appendix
+\appendixpage{}
+
+\input{appendix.tex}
+
 \end{document}
