add fin IntroCom fin ADA fin LA

--- a/ADA/Lectures/lec_11.tex
+++ b/ADA/Lectures/lec_11.tex
@@ -1,5 +1,7 @@
 \chapter{B-tree, 23-tree, 234-tree, RB-tree}
 
+\lecture{10}{28 Nov. 14:20}{}
+
 \section{RB-tree}
 
 \begin{definition}[RB-tree]
@@ -173,6 +175,8 @@
     \end{tikzpicture}
     \caption{Convert RB-tree to 234-tree}
 \end{figure}
+
+\newpage
 
 \begin{note}
     To convert RB-tree to 23-tree, we can follow the same procedure as converting to 234-tree, but we need to ensure we always combine the right child red node with its black parent node.
