--- a/Numerical Method/NumericalMethod.tex
+++ b/Numerical Method/NumericalMethod.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper]{report}
 \input{header.tex}
 \author{Vinsong}
-\title{Numerical Method}
+\title{CSIE5123: Numerical Method}
 
 \thispagestyle{empty}
 \addbibresource{reference.bib}
