--- a/Numerical Method/Lectures/lec_1.tex
+++ b/Numerical Method/Lectures/lec_1.tex
@@ -25,13 +25,13 @@ computer
 \end{eg}
 
 We want to know how many are zeros, we may use 
-\begin{minted}[linenos]{c++}
+\begin{minted}[linenos, bgcolor=LightGray]{c}
 for (int i = 0; i < 10; i++)
     if (x[i] == 0) count++;
 \end{minted}
 
 But people say that don't do the comparison of floating-point
-\begin{minted}[linenos]{c++}
+\begin{minted}[linenos, bgcolor=LightGray]{c}
 double epsilon = 1.0e-12;
 for (int i = 0; i < 10; i++)
     if (x[i] <= epsilon) count++;
